2006-08-08  Zack Weinberg  <zackw@panix.com>

	* tests/migrate_workspace/__driver__.lua: Add migration tests for
	format 1.
	* tests/migrate_workspace/format-1-unmodified
	* tests/migrate_workspace/format-1-rename: New files.
	* tester.lua: Fix some typos.

2006-08-05  Zack Weinberg  <zackw@panix.com>

	* tester.lua (gettree, _gettree, deltree, _deltree): New functions.

2006-08-04  Zack Weinberg  <zackw@panix.com>

	"Full revision in _MTN" transition.  Compiles, passes lua
	testsuite, bizarro failures in unit tests; migration testing needs
	to be implemented.

	* cmd_ws_commit.cc (setup): Give put_work_rev a revision with a
	single empty ancestor, not with no ancestors.
	* testsuite.lua, tests/_MTN_files_handled_correctly_in_aborted_commit
	* tests/automate_get_base_revision_id, tests/database_check
	* tests/delete_work_file_on_checkout, tests/netsync_permissions
	* tests/normalized_filenames, tests/renaming_a_file
	* tests/revert_file_to_base_revision, tests/revert_renames
	* tests/update_with_pending_add, tests/update_with_pending_drop
	* tests/update_with_pending_rename: Update code that looked at
	_MTN/work and/or _MTN/revision; partial pluck from
	ca0e87f5aa94378df6e221f06dce5c5058683873, with edits (the revision
	is in _MTN/revision, not _MTN/workrev).

2006-08-01  Zack Weinberg  <zackw@panix.com>

	* work.cc (get_work_rev, workspace::put_work_rev): New functions.
	(get_work_path, workspace::remove_work_cset, workspace::put_work_cset)
	(workspace::put_revision_id): Delete.
	All callers changed.
	* work.hh: Update to match.
	* revision.cc, revision.hh (make_revision): Add an overload that
	takes a base roster and a cset.
	* cmd_merging.cc, cmd_ws_commit.cc: Use put_work_rev and the
	csetful make_revision if appropriate.
	* work_migration.cc: Fix typos and include some missing headers.

	* work_migration.cc: Bump current_workspace_format to 2 and
	first_version_supporting_format to 0.29.
	(migrate_1_to_2): New function.